# JobOffers_DataExtraction

./: README.md  example_usage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
JobOffers_DataExtraction/: extraction_functions.py
JobOffers_DataExtraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Scrapers/: CrawlSpider.py  try.py
Scrapers/Scrapers/spiders/: AbstractSpider.py  JustJoinSpider.py  NoFluffJobsSpider.py
job_offers_data_extraction/: extraction_functions.py
json/: justjoin_2021-08-18.json  nofluff_2021-08-18.json
scraper/: xback1.py  xback2.py  xbigdata_to_devops.py  xbusinessinteligence_to_embeded.py  xfront.py  xfull.py  xother_to_businessanalyst.py  xtesting_to_mobile.py
scraper/scraper/spiders/: nofluffspider.py  spiders.py
splash_scraper/: scrapy.cfg
splash_scraper/splash_scraper/: items.py  middlewares.py  pipelines.py  settings.py
splash_scraper/splash_scraper/spiders/: justjoinit.py  splash.py
