[metadata]
name = JobOffers_DataExtraction'
version = 0.0.1
author = TJ
author_email = author@example.com
description = A small example package
url = https://github.com/tomoicki/JobOffers_DataExtraction/tree/using_requests
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src